Fix some dark mode issues

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -19,10 +19,8 @@
   .form-input {
     @apply block px-3 py-2;
     @apply text-inherit leading-snug;
-    @apply bg-white dark:bg-stone-900;
-    @apply border-stone-500/50 dark:border-stone-400/50;
+    @apply bg-transparent border-stone-500/50;
     @apply focus:ring-orange-700 focus:border-orange-700;
-    @apply dark:shadow-inner;
   }
 
   select { @apply pr-10; }
@@ -35,7 +33,6 @@
     @apply inline-block px-4 py-2 cursor-pointer;
     @apply leading-snug tracking-tight font-bold no-underline text-stone-900;
     @apply bg-stone-200 hover:bg-orange-100;
-    @apply dark:bg-stone-600 dark:text-inherit hover:dark:bg-orange-700;
   }
 
   .btn--primary {
@@ -56,6 +53,10 @@
 
   #navToggle:checked ~ #navLinks div {
       box-shadow: 0 15px 70px 5px rgba(38, 27, 35, 0.15);
+  }
+
+  .turbo-progress-bar {
+    @apply bg-orange-600;
   }
 }
 
